# LearnOpenGL

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cmake/: CMakeLists.txt  imgui.cmake
docs/: FIRE_ANIMATION_README.md  INPUT_SYSTEM_USAGE.md  POLAR_COORDINATES_EFFECT.md  RUN_SPRITE_ANIMATION.md  SPRITE_ANIMATION_GUIDE.md  SPRITE_SYSTEM_COMPLETE.md  TEXTURE2_USAGE_EXAMPLES.md  TEXTURE_CLASS_DESIGN.md  TEXTURE_VS_TEXTURE2.md
image/: 01_pipline.drawio
include/glad/: glad.h
lib/: glfw3.lib
shaders/: 01_08_Texture_fs.glsl  01_09_MultTexture_fs.glsl  01_10_Transformation_vs.glsl  02_01_Color_vs.glsl  02_02_BaseLight_fs.glsl  02_02_BaseLight_vs.glsl
shaders/01_shaders/: 01_01_Rectangle.vert  01_07_TriangleOffset_fs.glsl  01_07_TriangleOffset_vs.glsl  01_08_Texture_fs.glsl  01_09_MultTexture_vs.glsl  01_10_Transformation_fs.glsl  01_12_3DSpace_fs.glsl  01_12_3DSpace_vs.glsl  1_1_2_Rectangle.frag  1_1_2_Rectangle.vert  1_1_3_TwoTriangle.frag  1_1_3_TwoTriangle.vert  1_1_4_TwoVaoTriangle.frag  1_1_5_2_TwoShaderTriangle.frag  1_1_5_TwoShaderTriangle.frag  1_1_6_AlphabetF.frag  1_1_6_AlphabetF.vert  1_2_1_Glsl.frag  1_2_1_Glsl.vert  1_2_2_GlslUniform.frag  1_2_2_GlslUniform.vert  1_2_3_GlslVertexUniform.vert  1_2_4_GlslPolar.frag  1_2_4_GlslPolar.vert  1_2_5_GlslPolarTex.frag  1_2_5_GlslPolarTex.vert  1_3_1_Texture.frag  1_3_2_TextureMultiple.frag  1_3_3_TextureWrap.frag  1_3_3_TextureWrap.vert  1_3_4_TextureChangeUniform.frag  1_4_1_Transformation.frag  1_4_1_Transformation.vert  1_5_1_CoordinateSystem.frag  1_5_1_CoordinateSystem.vert  1_5_2_Cube.frag  1_5_2_Cube.vert
shaders/02_shaders/: 02_01_Color_fs.glsl  02_02_BaseLight_Ambient_fs.glsl  02_02_BaseLight_Diffuse_fs.glsl  02_02_BaseLight_Specular_fs.glsl  02_02_BaseLight_Specular_vs.glsl  02_05_Material_fs.glsl  02_05_Material_vs.glsl  02_06_LightingMaps_fs.glsl  02_06_LightingMaps_vs.glsl  02_07_LightingMapsInvert_fs.glsl  02_08_LightingMapsEmission_fs.glsl  02_09_LightCasters_Parallel_fs.glsl  02_10_LightCasters_Point_fs.glsl  02_11_LightCasters_Spot_fs.glsl  02_5_BaseLight_Specular_Imgui_fs.glsl  2_1_1_Color.frag  2_1_1_Light.frag  2_2_2_BaseLightDiffuse.frag  2_2_2_BaseLightDiffuse.vert  2_2_3_BaseLightSpecular.frag  2_2_3_BaseLightSpecular.vert  2_2_5_BaseLightPhongEyespace.frag  2_2_5_BaseLightPhongEyespace.vert  2_3_1_Materials.frag  2_3_2_Materials.frag  2_3_2_Materials.vert  2_4_1_DiffuseMap.frag  2_4_1_DiffuseMap.vert  2_4_2_SpecularMap.frag  2_4_4_SpecularRevert.frag  2_4_4_SpecularRevert.vert  2_5_1_DirectionalLight.frag  2_5_2_PointLight.frag  2_5_3_SpotLight.frag
shaders/02_shaders/lightingmap/: 04_1_LightingMap_Diffuse.fs  04_1_LightingMap_Diffuse.vs
shaders/03_shaders/: 01_1_Backpack_Rendering_fs.glsl  01_1_Backpack_Rendering_vs.glsl
shaders/04_shaders/: 4_1_1_depth_test.frag  4_1_1_depth_test.vert  4_1_2_depth_test_display.frag  4_1_3_depth_test_display_linear.frag  4_2_1_stencil_single_color.vert  4_3_1_blending_quad.frag  4_3_1_blending_quad.vert  4_6_1_skybox.frag  4_6_1_skybox.vert  4_6_3_skybox_reflect.frag  4_6_3_skybox_reflect.vert
shaders/sprite/: sprite.frag  sprite.vert
src/: glad.c
src/01_Start/: 00_Window.cpp  01_1_Triangle.cpp  01_2_Geometry.cpp  01_Triangle.cpp  02_Rectangle.cpp  03_1_TextureSprite.cpp  03_TwoTriangles.cpp  04_TwoVAOTriangle.cpp  05_TwoFragmentShader.cpp  06_Glsl.cpp  07_TriangleOffset.cpp  08_Texture.cpp  09_MultTexture.cpp  10_Transformation.cpp  11_MultTransformation.cpp  12_3DSpace.cpp  13_3DBox.cpp  14_Camera.cpp  15_CameraKeyInput.cpp  16_ImGUI.cpp  17_InstancingDraw.cpp  1_00_1_Window.cpp  1_00_2_Window.cpp  1_01_2_Rectangle.cpp  1_0_1_Window.cpp  1_0_2_Window.cpp  1_1_1_Triangle.cpp  1_1_2_Rectangle.cpp  1_1_3_TwoTriangle.cpp  1_1_4_TwoVaoTriangle.cpp  1_1_5_TwoShaderTriangle.cpp  1_1_6_AlphabetF.cpp  1_2_1_Glsl.cpp  1_2_2_GlslUniform.cpp  1_2_3_GlslVertexUniform.cpp  1_2_4_GlslPolar.cpp  1_2_5_GlslPolarTex.cpp  1_3_1_Texture.cpp  1_3_2_TextureMultiple.cpp  1_3_3_TextureWrap.cpp  (+8 more)
src/02_Light/: 01_Color.cpp  02_1_BaseLight_Ambient.cpp  02_2_BaseLight_Diffuse.cpp  02_3_BaseLight_Specular.cpp  02_4_BaseLight_Rotation.cpp  02_5_BaseLight_Specular_Imgui.cpp  02_BaseLight.cpp  03_BaseLightRotation.cpp  03_Material.cpp  04_1_LightingMaps.cpp  04_1_LightingMaps_Diffuse.cpp  04_2_LightingMaps_Specular.cpp  05_Material.cpp  06_LightingMaps.cpp  07_LightingMapsInvert.cpp  08_LightingMapsEmission.cpp  09_LightCasters_Parallel.cpp  10_LightCasters_Point.cpp  11_LightCasters_Spot.cpp  2_1_1_Color.cpp  2_2_1_BaseLight.cpp  2_2_2_BaseLightDiffuse.cpp  2_2_3_BaseLightSpecular.cpp  2_2_4_BaseLightPhongMove.cpp  2_2_5_BaseLightPhongEyespace.cpp  2_3_1_Materials.cpp  2_3_2_Materials.cpp  2_4_1_DiffuseMap.cpp  2_4_2_SpecularMap.cpp  2_4_3_SpecularImgui.cpp  2_4_4_SpecularRevert.cpp  2_5_1_DirectionalLight.cpp  2_5_2_PointLight.cpp  2_5_3_SpotLight.cpp
src/03_ModelLoading/: 01_1_Backpack_Rendering.cpp
src/04_AdvancedOpenGL/: 4_1_1_DepthTest.cpp  4_1_2_DepthTestDisplay.cpp  4_1_3_DepthTestDisplay_Linear.cpp  4_1_DepthTest.cpp  4_2_1_StencilTest.cpp  4_3_1_Blending_Texture.cpp  4_3_2_Blending_Transparent.cpp  4_6_1_Skybox.cpp  4_6_2_SkyboxPerformance.cpp  4_6_3_SkyboxReflect.cpp
src/include/assimp/: revision.h
src/sprite/: Animation.cpp  Animation.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteSheet.cpp  SpriteSheet.h  SpriteTypes.h
src/utils/: Application.cpp  Application.h  Camera.cpp  Camera.h  FPS.cpp  FPS.h  ImGuiManager.cpp  ImGuiManager.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OribitCamera.cpp  OribitCamera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.cxx  Texture.h  TextureCube.cpp  TextureCube.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  stb_define.h
textures/: SPRITE_SHEET_HOWTO.md  dump_out_raw_image_nv12_1920x1080.yuv
